--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <h1>Hi, new project on local</h1>
-<p>This is a new feature on visible on feature1 branch</p>
+<p>This is a new feature on visible on feature1 branch (extra for conflict)</p>
